force-app/main/default/objects/BTN_Certificate_Item__c/BTN_Certificate_Item__c.object-meta.xml
<CustomObject>
    <label>Certificate Item</label>
    <nameField>
        <displayFormat>CERT{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Certificate Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>