force-app/main/default/objects/BTN_Certificate_Item__c/fields/Certificate__c.field-meta.xml
<CustomField>
    <fullName>Certificate__c</fullName>
    <label>Certificate</label>
    <referenceTo>BTN_Certificate__c</referenceTo>
    <relationshipLabel>Certificate Items</relationshipLabel>
    <relationshipName>Certificate_Items</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>