force-app/main/default/objects/BTN_Certificate_Item__c/fields/Company_Refund__c.field-meta.xml
<CustomField>
    <fullName>Company_Refund__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Company Refund</label>
    <type>Checkbox</type>
</CustomField>